week40/cdk8s/templates/Deployment.cdk8s-demo-deploy-c8bc3da9.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cdk8s-demo
  name: cdk8s-demo-deploy-c8bc3da9
spec:
  replicas: 3
  selector:
    matchLabels:
      cdk8s.deployment: cdk8s-demo-deploy-c8a26a08
  template:
    metadata:
      labels:
        cdk8s.deployment: cdk8s-demo-deploy-c8a26a08
    spec:
      containers:
        - env:
            - name: env1
              value: valone
            - name: env2
              value: valtwo
          image: ubuntu
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
          name: ubuntu
          ports:
            - containerPort: 8080
          volumeMounts: []
      volumes: []
